<resources>
    <string name="app_name">同学</string>
    <string name="version">0.1.0</string>
    <string name="update_url">http://tongxue.jluapp.com/api.php?action=latest-version</string>

    <!--Base-->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_message_title">提示</string>
    <string name="dialog_text_wait">请等待</string>
    <string name="before_quit">再按一次退出程序</string>

    <!--注册登陆-->
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登　陆</string>
    <string name="to_register">没有账号？现在注册</string>
    <string name="verify_password">请确认密码</string>
    <string name="register">注　册</string>
    <string name="input_academy">请输入学院名</string>
    <string name="to_login">已有账号？现在登陆</string>

    <!--activity_main-->
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="group">小组</string>
    <string name="qa">问吧</string>
    <string name="blog">博客</string>
    <string name="order">我的</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <!--下拉刷新-->
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="load_full">已无更多</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">最近更新:%1$s前</string>
    <string name="updated_just_now">最近更新:刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="input_email">请输入校园邮箱</string>

    <!--fragment_group-->
    <string name="plus_search_group">搜索小组</string>
    <string name="plus_add_group">创建小组</string>
    <string name="groupVerify">验证消息</string>
    <string name="myGroup">我的小组</string>
    <string name="more">查看更多</string>
    <string name="agree">同意</string>
    <string name="hasAgree">已同意</string>
    <string name="disappear">不见了</string>

    <!--activity_group_search-->
    <string name="searchByName">按组名</string>
    <string name="searchByKind">按类别</string>
    <string name="searchGroupByName">请输入小组名称</string>
    <string name="searchGroupByKind">请输入小组类别</string>
    <string name="search">搜索</string>
    <string name="addGroup">加入</string>

    <!--activity_group_create-->
    <string name="groupCreate">创建小组</string>
    <string name="groupName">组名</string>
    <string name="groupKind">类别</string>
    <string name="groupAuthority">权限</string>
    <string name="groupIntro">简介</string>
    <string name="create">创建</string>
    <string name="groupName_input">请输入小组名</string>
    <string name="groupIntro_input">请输入小组简介</string>

    <!--activity_groupInfo-->
    <string name="groupInfo">小组信息</string>
    <string name="mGroupId">小组编号:</string>
    <string name="mGroupName">小组组名:</string>
    <string name="mGroupKind">小组类别:</string>
    <string name="mGroupIntro">小组简介:</string>
    <string name="mGroupTime">创建时间:</string>
    <string name="add">申请加入</string>

    <!--activity_chat-->
    <string name="chat">小组讨论</string>


    <!--activity_finish-->
    <string name="logout">注　销</string>
    <string name="finish">退　出</string>
    <string name="input_group_auth">请选择群权限类型</string>
    <string name="input_group_kind">请选择小组类型</string>
    <string name="input_group_nameinfo">请输入小组名和简介</string>
    <string name="input_group_name">请输入小组名</string>
    <string name="input_group_name_label">快给你的小组起一个好听的名字吧（必填）</string>
    <string name="input_group_intro_label">小组简介（选填）</string>
    <string name="input_group_label">请输入小组签名</string>
    <string name="CreateFinish">完成</string>
    <string name="more_kind">更多</string>
    <string name="hot_kind">热门分类</string>
    <string name="hot_group">小组推荐</string>
    <string name="cancel">取消</string>

    <string name="whiteboardedit">白板共享中...</string>
    <string name="stop">结束</string>
    <string name="send">发送</string>
    <string name="bt_pen">橡皮</string>
    <string name="bt_text">文字</string>
    <string name="bt_pic">图片</string>
    <string name="bt_size">粗细</string>
    <string name="bt_color">颜色</string>
    <string name="bt_undo">撤销</string>
    <string name="bt_redo">重做</string>
    <string name="bt_clear">清除</string>
    <string name="bt_save">截屏</string>
    <string name="bt_video">视频</string>
    <string name="bt_voice">声音</string>

    <string name="hide">隐藏</string>
    <string name="show">显示</string>




    <string name="groupId">小组编号</string>
    <string name="groupInfoKind">小组类别</string>
    <string name="groupInfoSize">小组人数</string>
    <string name="groupInfoTime">创建时间</string>
    <string name="groupInfoCreator">小组组长</string>
    <string name="weizhi">未知</string>
    <string name="input_blog_title">请输入博客标题</string>

    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="publish">发布</string>
    <string name="add_img">添加图片</string>
    <string name="add_line">添加分割线</string>
    <string name="add_link">添加链接</string>
    <string name="fenxiang">分享</string>
    <string name="shoucang">收藏</string>
    <string name="jubao">举报</string>
    <string name="addComment">添加评论</string>
    <string name="AllComment">全部评论:</string>
    <string name="describeQues">一句话描述你的疑问（*）：</string>
    <string name="toAsk">我要提问</string>
    <string name="sumQues">请在这里概述你的疑问</string>
    <string name="relativeQues">相关的问题：</string>
    <string name="nextstep">下一步</string>
    <string name="QuesDetail">问题补充（可选）：</string>
    <string name="toAddQaDetail">您可以在这里补充您的问题</string>
    <string name="qaXing">问题详情</string>
    <string name="write_your_ans_here">请在这里撰写您的回答~</string>
    <string name="submit_ans">提交回答</string>
    <string name="myBlog">我的博客</string>
    <string name="loadingAns">正在加载回答...</string>
    <string name="ItoAns">我来回答这个问题</string>
    <string name="comment">评论</string>
    <string name="addCommentHere">请在这里输入评论</string>
    <string name="noComment">暂时没有评论</string>
    <string name="createG">创建</string>
    <string name="next">继续</string>

    <string name="discussName">名称</string>
    <string name="discussIntroduction">介绍</string>
    <string name="discussStatus">状态</string>
    <string name="discussController">主讲</string>
    <string name="discussPublic">权限</string>


</resources>
