<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_msg"
        android:icon="@drawable/msg"
        android:orderInCategory="100"
        android:title="@string/groupVerify"
        app:showAsAction="always" />

    <item
        android:id="@+id/create_group"
        android:icon="@drawable/create"
        android:orderInCategory="100"
        android:title="@string/plus_add_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/search_group"
        android:icon="@drawable/search"
        android:orderInCategory="100"
        android:title="@string/plus_search_group"
        app:showAsAction="never" />

</menu>
