<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="landscape">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@drawable/toolbar">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/whiteboardedit"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/shape_click"/>

        <TextView
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/shape_click"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/bottom" >

        <com.tongxue.client.Group.Whiteboard.MyView
            android:id="@+id/myView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/moveIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <VideoView
            android:id="@+id/video_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            >
            </VideoView>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/penSizeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom"
        android:orientation="horizontal"
        android:visibility="gone" >

        <com.tongxue.client.Group.Whiteboard.PenSizeView
            android:id="@+id/penSizeIv"
            android:layout_width="@dimen/penSizeView_Width"
            android:layout_height="@dimen/penSizeView_Height"
            android:layout_marginLeft="5dp"/>

        <SeekBar
            android:id="@+id/penSizeSb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/oldlace"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bt_pen"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textSize="16sp"
                android:textColor="@color/lightblue2"
                android:background="@drawable/shape_button_search"
                android:text="@string/bt_pen" />

            <Button
                android:id="@+id/bt_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textSize="16sp"
                android:textColor="@color/lightblue2"
                android:background="@drawable/shape_button_search"
                android:text="@string/bt_text" />

            <Button
                android:id="@+id/bt_pic"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textSize="16sp"
                android:textColor="@color/lightblue2"
                android:background="@drawable/shape_button_search"
                android:text="@string/bt_pic" />

            <Button
                android:id="@+id/bt_size"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textSize="16sp"
                android:textColor="@color/lightblue2"
                android:background="@drawable/shape_button_search"
                android:text="@string/bt_size" />

            <Button
                android:id="@+id/bt_color"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textSize="16sp"
                android:textColor="@color/lightblue2"
                android:background="@drawable/shape_button_search"
                android:text="@string/bt_color" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bt_undo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textSize="16sp"
                android:textColor="@color/lightblue2"
                android:background="@drawable/shape_button_search"
                android:text="@string/bt_undo" />

            <Button
                android:id="@+id/bt_redo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textSize="16sp"
                android:textColor="@color/lightblue2"
                android:background="@drawable/shape_button_search"
                android:text="@string/bt_redo" />

            <Button
                android:id="@+id/bt_clear"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textSize="16sp"
                android:textColor="@color/lightblue2"
                android:background="@drawable/shape_button_search"
                android:text="@string/bt_clear" />

            <Button
                android:id="@+id/bt_video"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textSize="16sp"
                android:textColor="@color/lightblue2"
                android:background="@drawable/shape_button_search"
                android:text="@string/bt_video" />

            <Button
                android:id="@+id/bt_save"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textSize="16sp"
                android:textColor="@color/lightblue2"
                android:background="@drawable/shape_button_search"
                android:text="@string/bt_save" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>