<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/linen">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@drawable/toolbar">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/input_group_nameinfo"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/actionbar_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/back"
            android:background="@drawable/shape_button_add"/>

        <TextView
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:text="@string/createG"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/shape_click"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/group_info"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/input_group_name_label"
            android:textColor="@color/m8"
            android:textSize="13sp"/>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/input_group_name"
            android:textColorHint="@color/m5"
            android:textSize="18sp"
            android:textColor="@color/m8"
            android:background="@drawable/shape_common_edittext"
            android:layout_marginTop="15dp"
            android:layout_below="@id/tv_name"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/tv_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/input_group_intro_label"
            android:textColor="@color/m8"
            android:textSize="13sp"/>

        <EditText
            android:id="@+id/et_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_group_label"
            android:textColorHint="@color/m5"
            android:textSize="18sp"
            android:textColor="@color/m8"
            android:inputType="textMultiLine"
            android:gravity="left|top"
            android:minLines="5"
            android:background="@drawable/shape_common_edittext"
            android:layout_marginTop="15dp"
            android:layout_below="@id/tv_intro"/>

    </RelativeLayout>

</LinearLayout>