<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="@drawable/toolbar">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/toAsk"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:layout_centerVertical="true"
                android:src="@drawable/back"
                android:background="@drawable/shape_button_add"/>

            <TextView
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:layout_centerVertical="true"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:background="@drawable/shape_click"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/wen"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingLeft="6dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/describeQues"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingLeft="4dp"
                android:textSize="12sp"
                android:textColor="@color/m6"/>

        </LinearLayout>

        <EditText
            android:id="@+id/brief"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:hint="@string/sumQues"
            android:layout_margin="3dp"
            android:singleLine="true"
            android:gravity="top|left"
            android:textSize="18sp"
            android:textColor="@color/m9"
            android:textColorHint="@color/m4"
            android:background="@drawable/shape_common_edittext1"/>

        <TextView
            android:id="@+id/RelaTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/relativeQues"
            android:textSize="16sp"
            android:visibility="gone"
            android:textColor="@color/orchid"/>

        <com.tongxue.client.View.NoScrollListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</ScrollView>