<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="200dp"
    android:background="@android:color/transparent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/layout_name"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/shape_edittext_top"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_gravity="center"
            android:src="@drawable/name"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/input_username"
            android:textColor="@color/m8"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:background="@color/aqua"/>

    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="0.8dp"
        android:layout_below="@id/layout_name"
        android:background="@color/m2"/>

    <LinearLayout
        android:id="@+id/layout_pwd"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@id/line"
        android:background="@drawable/shape_edittext_bottom"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_gravity="center"
            android:src="@drawable/pwd"/>

        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:textColor="@color/m8"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:background="@color/aqua"/>

    </LinearLayout>


    <Button
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@id/layout_pwd"
        android:layout_marginTop="70dp"
        android:background="@drawable/shape_button"
        android:text="@string/login"
        android:textSize="20dp"
        android:textColor="@color/lightblue1"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_register"
            android:textSize="14sp"
            android:textColor="@color/m9"/>

    </LinearLayout>

</RelativeLayout>
