<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@drawable/toolbar">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/toAsk"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/back"
            android:background="@drawable/shape_button_add"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/QuesDetail"
        android:textSize="13sp"
        android:textColor="@color/m6"/>

    <EditText
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="3dp"
        android:gravity="top|left"
        android:hint="@string/toAddQaDetail"
        android:textSize="15sp"
        android:textColor="@color/m4"
        android:lines="8"
        android:maxLines="8"
        android:background="@drawable/shape_common_edittext1"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">

        <Button
            android:id="@+id/askBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="立即提问"
            android:textColor="@color/lightblue2"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@drawable/shape_button"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>


</LinearLayout>

